<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationShare</string>
    <string name="app_title">Location Share</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="my_location">My location</string>
    <string name="my_friends">My friends</string>
    <string name="layers">Layers</string>
    <string name="save_track">Save gpx track</string>
    <string name="clear_track">Clear track</string>
    <string name="track_cleared">Track cleared.</string>
    <string name="maps">Maps</string>
    <string name="use_online_maps">Use online maps</string>
    <string name="tile_source">Tile source</string>
    <string name="choose_tile_source">Choose tile source</string>
    <string name="location_share">Location share</string>
    <string name="location_providers">Location providers</string>
    <string name="network_provider">Network provider</string>
    <string name="gps_provider">GPS provider</string>
    <string name="interval_foreground">Update interval in foreground mode</string>
    <string name="interval_background">Update interval in background mode</string>
    <string name="interval_livetracking">Update interval of live tracking</string>
    <string name="choose_time_interval">Choose time interval</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="livetracking_enable">Enable live tracking</string>
    <string name="livetracking_url">URL for live tracking</string>
    <string name="livetracking_url_summary">URL of remote live tracker with available parameters: {lat}, {lon}, {alt}, {speed}, {time}.</string>
    <string name="livetracking_url_default">http://example.com/tracker.php?lat={lat}&amp;lon={lon}&amp;alt={alt}&amp;speed={speed}&amp;timestamp={time}</string>
    <string name="choose_visible_layers">Choose visible layers</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="overlays">
        <item>My location</item>
        <item>Friend\'s locations</item>
        <item>Scale bar</item>
        <item>Compass</item>
        <item>Path</item>
    </string-array>
    <string-array name="tile_sources">
        <item>Freemap Slovakia Hiking</item>
        <item>Freemap Slovakia Cycle Map</item>
        <item>Freemap Slovakia Car Atlas</item>
        <item>Map1.eu</item>
        <item>OpenStreetMap Mapnik</item>
        <item>OpenStreetMap MapQuest</item>
        <item>OpenStreetMap Cycle Map</item>
    </string-array>
    <string-array name="time_intervals">
        <item> 0 sec</item>
        <item> 1 sec</item>
        <item> 5 sec</item>
        <item>15 sec</item>
        <item>30 sec</item>
        <item> 1 min</item>
        <item> 5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item> 1 hour</item>
        <item> 2 hours</item>
        <item> 3 hours</item>
        <item> 6 hours</item>
        <item>12  hours</item>
        <item>24  hours</item>
    </string-array>

    <string name="service_started">Location Share background service is running.</string>
    <string name="service_stopped">Location Share background service has stopped.</string>
    <string name="location_service_label">Location Share</string>
    <string name="out_of_service">out of service</string>
    <string name="temporarily_unavailable">temporarily unavailable</string>

</resources>